# realization-effect-project

./: .gitignore  Experiment.ipynb  Kimi+Grok.ipynb  Makefile  SPAR S26 - Midterm Report Outline (Updated).docx  analyze_results.py  block_dashboard.py  conditions.csv  generate_prompts.py  partition_results.py  pyproject.toml  readme.md  reconcile_results.py  results_merged.csv  results_temp05.csv  run_dual_experiment.sh  run_experiment.py
Jupyter notebooks/: Merged CSV.ipynb
activation_logging/: __init__.py  log_residuals.py  residual_streams.py
configs/activation_analysis/: README.md  emotions_general_v2.json  emotions_initial.json  final_inference_prompt_generation_v1.json  realization_vector_generation_v1.json  realization_vector_heldout_generation_v1.json
configs/emotion_activation/: final_inference_prompt_generation_v1.json  general_emotion_risk_generation_v1.json
configs/realization_effect/: llm_eval_list_v2.csv
configs/sae/: README.md  first_sae_prompt_mix_v1_training_smoke.json  gemma3_smoke_dataset.json  initial_training_template.json
docs/: activation_vector_realization_plan.md  cloud_open_model_activations.md  cloud_open_model_behavior.md  emotion_probe_design.md  forward_pass_plan.md  repository_layout.md  sae_architecture.md  sae_artifact_inventory.md  sae_decisions.md  steering_architecture.md
docs/engineering/: code_organization_review.md
notebooks/: 5.4mini+haiku.ipynb  7000 row .ipynb  Multiple models test.ipynb
reports/: current_findings.md
results/: README.md  results.csv  sample_results.csv
scripts/: analyze_behavior_vector_eval.py  analyze_projection_behavior_link.py  analyze_realization_results.py  audit_prompt_overlap.py  block_dashboard.py  build_activation_vectors.py  build_behavioral_report_tables.py  build_realization_classification_prompts.py  build_report_figures.py  evaluate_activation_vectors.py  export_emotion_probes.py  export_prompts.py  generate_activation_prompts.py  generate_heldout_activation_prompts.py  inspect_activation_dataset.py  inspect_sae_dataset.py  inspect_sae_features.py  log_residual_streams.py  partition_realization_results.py  reconcile_realization_results.py  reorganize_csv.py  reparse_behavior_vector_eval.py  reparse_realization_results.py  report_behavior_robustness.py  run_behavior_vector_eval.py  run_realization_experiment.py  score_behavior_vector_eval.py  steer_realization_classification.py  steer_realization_direction.py  summarize_steering_report_tables.py  train_sae.py  validate_activation_run.py  validate_behavior_prompts.py
src/sae/: __init__.py  (+8 more)
tests/: test_analysis.py  test_classification_prompts.py  test_interpretability.py  test_prompt_overlap_audit.py  test_reparse_results.py  test_runner.py  test_sae_dataset.py
(+113 files in other folders)
