[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "realization-effect-project"
version = "0.1.0"
description = "Realization-effect LLM experiments and emotion-activation tooling."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "openai",
  "pandas",
  "scipy",
  "statsmodels",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
interp = [
  "torch",
  "transformers",
]

[tool.setuptools.packages.find]
where = ["src"]
