[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "realization-effect-project"
version = "0.1.0"
description = "Realization-effect LLM experiments and emotion-activation tooling."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "openai",
  "pandas",
  "scipy",
  "statsmodels",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
interp = [
  "torch",
  "transformers",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
  "external",
  "models",
  "notebooks",
  "reports",
  "results",
  "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402"]
