[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "realization-effect-project"
version = "0.1.0"
description = "Realization-effect LLM experiments and emotion-activation tooling."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "openai",
  "pandas",
  "scipy",
  "statsmodels",
]

[project.scripts]
realization-analyze = "realization_effect.analysis:main"
realization-dashboard = "realization_effect.block_dashboard:main"
realization-partition = "realization_effect.partition:main"
realization-reconcile = "realization_effect.reconcile:main"
realization-reorganize = "realization_effect.reorganize_csv:main"
realization-reparse = "realization_effect.reparse_results:main"
realization-run = "realization_effect.runner:main"
activation-export-emotion-probes = "activation_analysis.emotion_probes:main"
activation-log-residuals = "activation_analysis.log_residuals:main"

[project.optional-dependencies]
dev = [
  "matplotlib",
  "pytest",
  "ruff",
  "seaborn",
]
interp = [
  "torch",
  "transformers",
]
report = [
  "matplotlib",
  "seaborn",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
  "external",
  "models",
  "notebooks",
  "reports",
  "results",
  "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402"]
